--- a/index.htm
+++ b/index.htm
@@ -159,7 +159,7 @@
                                                                                             <option value="2248 LEETON">2248 LEETON</option>
                                                                                             <option value="2249 MEREWETHER (THE JUNCTION)">2249 MEREWETHER (THE JUNCTION)</option>
                                                                                             <option value="2250 METFORD">2250 METFORD</option>
-                                                                                            <option value="2251 Gosford">2251 Gosford</option>
+                                                                                            <option value="2251 GOSFORD">2251 GOSFORD</option>
                                                                                             <option value="2252 OURIMBAH">2252 OURIMBAH</option>
                                                                                             <option value="2253 WHITTINGHAM">2253 WHITTINGHAM</option>
                                                                                             <option value="2255 COFFS HARBOUR CENTRAL">2255 COFFS HARBOUR CENTRAL</option>
@@ -860,7 +860,7 @@
                                                                                             <option value="2248 LEETON">2248 LEETON</option>
                                                                                             <option value="2249 MEREWETHER (THE JUNCTION)">2249 MEREWETHER (THE JUNCTION)</option>
                                                                                             <option value="2250 METFORD">2250 METFORD</option>
-                                                                                            <option value="2251 Gosford">2251 Gosford</option>
+                                                                                            <option value="2251 GOSFORD">2251 GOSFORD</option>
                                                                                             <option value="2252 OURIMBAH">2252 OURIMBAH</option>
                                                                                             <option value="2253 WHITTINGHAM">2253 WHITTINGHAM</option>
                                                                                             <option value="2255 COFFS HARBOUR CENTRAL">2255 COFFS HARBOUR CENTRAL</option>
@@ -1432,7 +1432,7 @@
                                                                                     <option value="2248 LEETON">2248 LEETON</option>
                                                                                     <option value="2249 MEREWETHER (THE JUNCTION)">2249 MEREWETHER (THE JUNCTION)</option>
                                                                                     <option value="2250 METFORD">2250 METFORD</option>
-                                                                                    <option value="2251 Gosford">2251 Gosford</option>
+                                                                                    <option value="2251 GOSFORD">2251 GOSFORD</option>
                                                                                     <option value="2252 OURIMBAH">2252 OURIMBAH</option>
                                                                                     <option value="2253 WHITTINGHAM">2253 WHITTINGHAM</option>
                                                                                     <option value="2255 COFFS HARBOUR CENTRAL">2255 COFFS HARBOUR CENTRAL</option>
