--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@
                 <form id="signup_form" method="POST" action="https://flapp.venantech.com/stepup-signup" enctype='multipart/form-data'>
                     <div class="row">
                         <div class="col-md-5">
-                            <label for="add_remove">Would you like to add or remove an employee on Step Up?</label>
+                            <label for="add_remove">Would you like to add, remove or transfer an employee on Step Up?</label>
                         </div>
                         <div class="col-md-1">
                             <div class="form-check">
@@ -48,6 +48,13 @@
                                     Remove
                                 </label>
                             </div>
+                        <div class="col-md-1">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="add_remove" id="add_remove3" value="Transfer">
+                                <label class="form-check-label" for="add_remove3">
+                                    Transfer
+                                </label>    
+                            </div>  
                         </div>
                     </div>
                     
