--- a/index.htm
+++ b/index.htm
@@ -1289,6 +1289,7 @@
                                                                                             <option value="CA / Franchisee ">CA / Franchisee </option>
                                                                                             <option value="Auditor (HQ only)">Auditor (HQ only)</option>
                                                                                             <option value="Regional Manager (HQ only)">Regional Manager (HQ only)</option>
+                                                                                            <option value="Other">Other</option>
                                             
                                         </select>                                
                                     </div>
