--- a/index.htm
+++ b/index.htm
@@ -1869,20 +1869,16 @@
                             <div class="row">                  
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label for="first_name">First Name: *</label>
-                                        <input type="text" name="first_name" id="first_name" class="form-control" value="" >
+                                        <label for="transfer_first_name">First Name: *</label>
+                                        <input type="text" name="transfer_first_name" id="transfer_first_name" class="form-control" value="" >
                                     </div>
                                 </div>
+                              </div>
+                              </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label for="middle_name">Middle Name:</label>
-                                        <input type="text" name="middle_name" id="middle_name" class="form-control" value="" >
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label for="last_name">Last Name: *</label>
-                                        <input type="text" name="last_name" id="last_name" class="form-control" value="" >
+                                        <label for="transfer_last_name">Last Name: *</label>
+                                        <input type="text" name="transfer_last_name" id="transfer_last_name" class="form-control" value="" >
                                 </div>
                             </div>
                         </div>
