--- a/index.htm
+++ b/index.htm
@@ -1865,6 +1865,7 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="transfer_form" style="display: none;">
                         <div class="row">                  
                                 <div class="col-md-4">
                                     <div class="form-group">
