--- a/index.htm
+++ b/index.htm
@@ -1869,14 +1869,10 @@
                         <div class="row">                  
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label for="transfer_first_name">First Name: *</label>
-                                        <input type="text" name="transfer_first_name" id="transfer_first_name" class="form-control" value="" >
+                                        <label for="transfer_full_name">Full Name: *</label>
+                                        <input type="text" name="transfer_full_name" id="transfer_full_name" class="form-control" value="" >
                                     </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label for="transfer_last_name">Last Name: *</label>
-                                        <input type="text" name="transfer_last_name" id="transfer_last_name" class="form-control" value="" >
+                                  </div>                     
                                 </div>
                             </div>
                         </div>
@@ -2155,6 +2151,29 @@
                 if(!remove_full_name_field.hasAttribute('required'))
                 {
                     remove_full_name_field.setAttribute("required","required");
+                }
+                if(!remove_username_field.hasAttribute('required'))
+                {
+                    remove_username_field.setAttribute("required","required");
+                }
+                if(!remove_current_site_field.hasAttribute('required'))
+                {
+                    remove_current_site_field.setAttribute("required","required");
+                }
+                if(!remove_email_field.hasAttribute('required'))
+                {
+                    remove_email_field.setAttribute("required","required");
+                }
+                if(!remove_mobile_number_field.hasAttribute('required'))
+                {
+                    remove_mobile_number_field.setAttribute("required","required");
+                    
+                
+                $(".transfer_form").show();
+
+                if(!transfer_full_name_field.hasAttribute('required'))
+                {
+                    transfer_full_name_field.setAttribute("required","required");
                 }
                 if(!remove_username_field.hasAttribute('required'))
                 {
