--- a/index.htm
+++ b/index.htm
@@ -1872,8 +1872,26 @@
                                         <label for="transfer_full_name">Full Name: *</label>
                                         <input type="text" name="transfer_full_name" id="transfer_full_name" class="form-control" value="" >
                                     </div>
+                                 </div>
+                              </div> 
+                              <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="position">Position: *</label>
+                                        <select name="position" id="position" class="form-control" >
+                                            <option value="">Select a position</option>                                    
+                                                                                            <option value="Console Operator (CO)">Console Operator (CO)</option>
+                                                                                            <option value="Kitchen Hand (KH)">Kitchen Hand (KH)</option>
+                                                                                            <option value="CO &amp; KH">CO &amp; KH</option>
+                                                                                            <option value="Site Manager">Site Manager</option>
+                                                                                            <option value="CA / Franchisee ">CA / Franchisee </option>
+                                                                                            <option value="Auditor (HQ only)">Auditor (HQ only)</option>
+                                                                                            <option value="Regional Manager (HQ only)">Regional Manager (HQ only)</option>
+                                                                                            <option value="Other">Other</option>
+                                            
+                                        </select>                                
+                                     </div>
                                   </div>                     
-                                </div>
+                               </div>
                             </div>
                         </div>
                         <div class="row">
