--- a/index.htm
+++ b/index.htm
@@ -1888,11 +1888,15 @@
                                                                                             <option value="Regional Manager (HQ only)">Regional Manager (HQ only)</option>
                                                                                             <option value="Other">Other</option>
                                             
-                                        </select>                                
-                                     </div>
-                                  </div>                     
-                               </div>
+                                        </select>
+                                  </div>
+                                 <div class="row">
+                                 <div class="col-12 text-center" style="margin-top: 5px;">
+                                    <input type="submit" id="submit_selection" value="Submit" class="btn btn-primary" onclick=""/>
+                                </div>
+                              </div>                     
                             </div>
+                         </div>
                         </div>
                         <div class="row">
                             <div class="col-12 text-center" style="margin-top: 5px;">
