--- a/index.htm
+++ b/index.htm
@@ -3151,7 +3151,7 @@
                 }
                 if(transfer_position_field.hasAttribute('required'))
                 {
-                    transfer_position_field.setAttribute("required")
+                    transfer_position_field.setAttribute("required","required")
                 }
             }
 
