--- a/index.htm
+++ b/index.htm
@@ -18,8 +18,8 @@
     </style>
 </head>
 <body>
-    <input type="hidden" name="hidden_keys" value="[&quot;add_pieface&quot;,&quot;add_petroleum&quot;]">
-    <input type="hidden" name="hidden_data" value="[[&quot;training_day&quot;,&quot;id_card&quot;],[&quot;Enable&quot;,&quot;Enable&quot;],[&quot;Disable&quot;,&quot;Disable&quot;]]">
+    <input type="hidden" name="hidden_keys" value="[&quot;add_pieface&quot;,&quot;add_petroleum&quot;&quot;add_dealer&quot;]">
+    <input type="hidden" name="hidden_data" value="[[&quot;training_day&quot;,&quot;id_card&quot;],[&quot;Enable&quot;,&quot;Enable&quot;],[&quot;Disable&quot;,&quot;Disable&quot;][&quot;Disable&quot;,&quot;Disable&quot;]">
     <div class="container">
         <div class="row"> 
             <div class="col-12">
@@ -2181,11 +2181,16 @@
             var site_type_field = document.querySelector("input[name=site_type]");
             var training_day_field = document.getElementById("training_day");
             var id_card_field = document.getElementById("id_card");
+            
 
             var training_day_is_required = add_remove_field.value == "Add" && ( ( inputValue=="United/Pie Face" && hidden_data[add_pieface_index+1][training_day_index].toLowerCase() == "enable" ) ||
                                                                     ( inputValue=="United Petroleum" && hidden_data[add_petroleum_index+1][training_day_index].toLowerCase() == "enable" ) );
             var id_card_is_required = add_remove_field.value == "Add" && ( ( inputValue=="United/Pie Face" && hidden_data[add_pieface_index+1][id_card_index].toLowerCase() == "enable" ) ||
-                                                                    ( inputValue=="United Petroleum" && hidden_data[add_petroleum_index+1][id_card_index].toLowerCase() == "enable" ) );
+                                                                    ( inputValue=="United Petroleum" && hidden_data[add_petroleum_index+1][id_card_index].toLowerCase() == "enable" ) ) ||
+                                                                       ( inputValue=="Dealer" && hidden_data[add_dealer_index+2][id_card_index].toLowerCase() == "enable" )
+            var photo_id_is_required = add_remove_field.value == "Add" && ( ( inputValue=="United/Pie Face" && hidden_data[add_pieface_index+1][id_card_index].toLowerCase() == "enable" ) ||
+                                                                    ( inputValue=="United Petroleum" && hidden_data[add_petroleum_index+1][id_card_index].toLowerCase() == "enable" ) ) ||
+                                                                       ( inputValue=="Dealer" && hidden_data[add_dealer_index+2][id_card_index].toLowerCase() == "enable" )        
 
             $(".child_add_form").show();
 
@@ -2220,6 +2225,18 @@
                         id_card_field.removeAttribute("required")
                     }
                 }
+                
+                if(photo_id_is_required){
+                    $(".photo_id_col").show();
+                    if(!photo_id_field.hasAttribute('required'))
+                    {
+                        photo_id_field.setAttribute("required","required")
+                    }
+                }else{
+                    $(".photo_id_col").hide();
+                    if(photo_id_field.hasAttribute('required'))
+                    {
+                       photo_id_field.removeAttribute("required")
             }
 
         });
