--- a/index.htm
+++ b/index.htm
@@ -2182,8 +2182,7 @@
             var training_day_is_required = add_remove_field.value == "Add" && ( ( inputValue=="United/Pie Face" && hidden_data[add_pieface_index+1][training_day_index].toLowerCase() == "enable" ) ||
                                                                     ( inputValue=="United Petroleum" && hidden_data[add_petroleum_index+1][training_day_index].toLowerCase() == "enable" ) );
             var id_card_is_required = add_remove_field.value == "Add" && ( ( inputValue=="United/Pie Face" && hidden_data[add_pieface_index+1][id_card_index].toLowerCase() == "enable" ) ||
-                                                                    ( inputValue=="United Petroleum" && hidden_data[add_petroleum_index+1][id_card_index].toLowerCase() == "enable" ) ) ||
-                                                                       ( inputValue=="Dealer" && hidden_data[add_dealer_index+2][id_card_index].toLowerCase() == "enable" )
+                                                                    ( inputValue=="United Petroleum" && hidden_data[add_petroleum_index+1][id_card_index].toLowerCase() == "enable" ) );
    
 
             $(".child_add_form").show();
