--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <input type="hidden" name="hidden_keys" value="[&quot;add_pieface&quot;,&quot;add_petroleum&quot;&quot;add_dealer&quot;]">
+    <input type="hidden" name="hidden_keys" value="[&quot;add_pieface&quot;,&quot;add_petroleum&quot;]">
     <input type="hidden" name="hidden_data" value="[[&quot;training_day&quot;,&quot;id_card&quot;],[&quot;Enable&quot;,&quot;Enable&quot;],[&quot;Disable&quot;,&quot;Disable&quot;]">
     <div class="container">
         <div class="row"> 
