--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
 </head>
 <body>
     <input type="hidden" name="hidden_keys" value="[&quot;add_pieface&quot;,&quot;add_petroleum&quot;]">
-    <input type="hidden" name="hidden_data" value="[[&quot;training_day&quot;,&quot;id_card&quot;],[&quot;Enable&quot;,&quot;Enable&quot;],[&quot;Disable&quot;,&quot;Disable&quot;]">
+    <input type="hidden" name="hidden_data" value="[[&quot;training_day&quot;,&quot;id_card&quot;],[&quot;Enable&quot;,&quot;Enable&quot;],[&quot;Disable&quot;,&quot;Disable&quot;]]">
     <div class="container">
         <div class="row"> 
             <div class="col-12">
