--- a/index.htm
+++ b/index.htm
@@ -1274,13 +1274,16 @@
                                         <label for="position">Position: *</label>
                                         <select name="position" id="position" class="form-control" >
                                             <option value="">Select a position</option>                                    
-                                                                                            <option value="Console Operator (CO)">Console Operator (CO)</option>
-                                                                                            <option value="Kitchen Hand (KH)">Kitchen Hand (KH)</option>
-                                                                                            <option value="CO &amp; KH">CO &amp; KH</option>
+                                                                                            <option value="Console Operator (CO)">Console Operator (CO)</option>   
                                                                                             <option value="Site Manager">Site Manager</option>
-                                                                                            <option value="CA / Franchisee ">CA / Franchisee </option>
+                                                                                            <option value="CA/Franchisee ">CA/Franchisee </option>
+											    <option value="Kitchen Hand (KH)">Kitchen Hand (KH)</option>
+                                                                                            <option value="CO &amp; KH">CO &amp; KH</option>
                                                                                             <option value="Auditor (HQ only)">Auditor (HQ only)</option>
                                                                                             <option value="Regional Manager (HQ only)">Regional Manager (HQ only)</option>
+	                                                                                    <option value="FACILITIY EMPLOYEE (Dealer only)">FACILITIY EMPLOYEE (Dealer only)</option>
+											    <option value="FACILITIY SUPERVISOR (Dealer only)">FACILITIY SUPERVISOR (Dealer only)</option>
+											    <option value="FACILITIY MANAGER (Dealer only)">FACILITIY MANAGER (Dealer only)</option>
                                                                                             <option value="Other">Other</option>
                                             
                                         </select>                                
@@ -1299,9 +1302,10 @@
                                         <label for="training_day">Training Day: *</label>
                                         <select name="training_day" id="training_day" class="form-control" >
                                             <option value="">Select a training day</option>                                    
-                                                                                            <option value="Thursday - 04-Mar-21 (32 Seats available)">Thursday - 04-Mar-21 (32 Seats available)</option>
                                                                                             <option value="Tuesday - 09-Mar-21 (35 Seats available)">Tuesday - 09-Mar-21 (35 Seats available)</option>
                                                                                             <option value="Thursday - 11-Mar-21 (35 Seats available)">Thursday - 11-Mar-21 (35 Seats available)</option>
+											    <option value="Tuesday - 16-Mar-21 (32 Seats available)">Tuesday - 16-Mar-21 (32 Seats available)</option>
+											    <option value="Thursday - 18-Mar-21 (32 Seats available)">Thursday - 18-Mar-21 (32 Seats available)</option>					
                                                                                     </select>      
                                     </div>                          
                                 </div>
